--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
         rel="stylesheet">
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -54,7 +59,7 @@
     </main>
 
     <article class="bicicletas-lista">
-        <h2 class="container font-1-xxl">escolha a sua <span class="cor-p1">.</span></h2>
+        <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
         <ul>
             <li>
                 <a href="./biciletas/magic.html">
@@ -73,7 +78,7 @@
             <li>
                 <a href="./biciletas/magic.html">
                     <img src="../public/img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
-                    <h3 class="font-1-xl">Nebula cosmic </h3>
+                    <h3 class="font-1-xl">Nebula Cosmic </h3>
                     <span class="font-2-m cor-8">R$ 3999</span>
                 </a>
             </li>
@@ -84,7 +89,7 @@
         <div class="tecnologia container">
             <div class="tecnologia-conteudo">
                 <span class="font-2-l-b cor-5">Tecnologia Avançada</span>
-                <h2 class="font-1-xxl cor-0">Você escolhe as suas cores e componentes <span class="cor-p1">.</span></h2>
+                <h2 class="font-1-xxl cor-0">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
                 <p class="font-2-l cor-5">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para
                     o seu corpo e altura,
                     garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente
@@ -118,6 +123,121 @@
         </div>
 
     </article>
+
+    <section class="parceiros" aria-label="Nossos parceiros">
+        <h2 class="container font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
+
+        <ul>
+
+            <li> <img src="../public/img/parceiros/caravan.svg" alt="caravan"> </li>
+            <li><img src="../public/img/parceiros/ranek.svg" alt="ranek"> </li>
+            <li> <img src="../public/img/parceiros/handel.svg" alt="handel"> </li>
+            <li> <img src="../public/img/parceiros/dogs.svg" alt="dogs"> </li>
+            <li> <img src="../public/img/parceiros/lescone.svg" alt="lescone"> </li>
+            <li><img src="../public/img/parceiros/flexblog.svg" alt="flexblog"> </li>
+            <li><img src="../public/img/parceiros/wildbeast.svg" alt="wildbeast"> </li>
+            <li><img src="../public/img/parceiros/surfbot.svg" alt="surfbot"> </li>
+
+
+        </ul>
+    </section>
+
+    <section class="depoimento" aria-label="depoimento">
+        <div>
+            <img src="../public/img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikecraft">
+
+
+        </div>
+        <div class="depoimento-conteudo">
+            <blockquote class="font-1-xl cor-p5">
+                <p>
+                    Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por
+                    esta atividade. Recomendo à todos que amo.
+                </p>
+            </blockquote>
+            <span class="font-1-m-b cor-p4">Ana Júlia</span>
+        </div>
+    </section>
+
+
+    <article class="seguros-bg">
+        <div class="seguros container">
+            <h2 class="font-1-xxl cor-0">Seguros<span class="cor-p1">.</span></h2>
+
+
+            <div class="seguros-item">
+                <h3 class="font-1-xl cor-6">PRATA</h3>
+                <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
+                <ul class="font-2-m cor-0">
+                    <li>Duas trocar por ano</li>
+                    <li>Assistência técnica</li>
+                    <li>Suporte 08h as 18h</li>
+                    <li>Cobertura estadual</li>
+                </ul>
+                <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+            </div>
+
+
+            <div class="seguros-item">
+                <h3 class="font-1-xl cor-p1">OURO</h3>
+                <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
+                <ul class="font-2-m cor-0">
+                    <li>Cinco trocas por ano</li>
+                    <li>Assistência especial</li>
+                    <li>Suporte 24h</li>
+                    <li>Cobertura nacional</li>
+                    <li>Desconto em parceiros</li>
+                    <li>Acesso ao Clube Bikcraft</li>
+                </ul>
+                <a class="botao" href="./orcamento.html">Inscreva-se</a>
+            </div>
+        </div>
+    </article>
+
+    <footer class="footer-bg">
+        <div class="footer container">
+            <img src="../public/img/bikcraft.svg" alt="Bikcraft">
+            <div class="footer-contato">
+                <h3 class="font-2-l-b cor-0">Contato</h3>
+                <ul class="cor-5 font-2-m">
+                    <li> <a href="tel:+551199999999">+55 11 9999-9999</a></li>
+                    <li> <a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a></li>
+                    <li>Rua Ali Perto, 42 - Paulista</li>
+                    <li>São Paulo - SP</li>
+                </ul>
+                <div class="footer-redes">
+                    <a href="#"> <img src="../public/img/redes/instagram.svg" alt="instagram"></a>
+                    <a href="#"> <img src="../public/img/redes/facebook.svg" alt="facebook"></a>
+                    <a href="#"> <img src="../public/img/redes/youtube.svg" alt="youtube"></a>
+                </div>
+
+            </div>
+
+            <div class="footer-informacoes">
+                <h3 class="font-2-l-b cor-0">informações</h3>
+                <nav>
+                    <ul class="font-1-m cor-5">
+                        <li>
+                            <a href="./bicicletas.html">Bicicletas</a>
+                        </li>
+                        <li>
+                            <a href="./seguros.html">Seguros</a>
+                        </li>
+                        <li>
+                            <a href="./contato.html">Contato</a>
+                        </li>
+
+                        <li>
+                            <a href="./termos.html">Termos e Condições</a>
+                        </li>
+                    </ul>
+                </nav>
+
+            </div>
+
+            <p class="font-2-m cor-6 footer-copy">Bikcraft © Alguns direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
