chore:contact/bikes done! ✔

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
             </nav>
         </div>
     </header>
+
     <main class="introducao-bg">
         <div class="introducao container">
             <div class="introducao-conteudo">
@@ -62,21 +63,21 @@
         <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
         <ul>
             <li>
-                <a href="./biciletas/magic.html">
+                <a href="./bicicletas/magic.html">
                     <img src="../public/img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
                     <h3 class="font-1-xl">Magic Might</h3>
                     <span class="font-2-m cor-8">R$ 2499</span>
                 </a>
             </li>
             <li>
-                <a href="./biciletas/magic.html">
+                <a href="./bicicletas/nimbus.html">
                     <img src="../public/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
                     <h3 class="font-1-xl">Nimbus Stark</h3>
                     <span class="font-2-m cor-8">R$ 4999</span>
                 </a>
             </li>
             <li>
-                <a href="./biciletas/magic.html">
+                <a href="./bicicletas/nebula.html">
                     <img src="../public/img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
                     <h3 class="font-1-xl">Nebula Cosmic </h3>
                     <span class="font-2-m cor-8">R$ 3999</span>
@@ -95,7 +96,7 @@
                     garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente
                     as suas cores.</p>
 
-                <a class="link" href=".bicicletas.html">Escolha um modelo</a>
+                <a class="link" href="../src/bicicletas.html">Escolha um modelo</a>
                 <div class="tecnologia-vantagens">
                     <div>
                         <img src="../public/img/icones/eletrica.svg" alt="">
@@ -158,7 +159,6 @@
             <span class="font-1-m-b cor-p4">Ana Júlia</span>
         </div>
     </section>
-
 
     <article class="seguros-bg">
         <div class="seguros container">
