--- a/src/seguros.html
+++ b/src/seguros.html
@@ -192,7 +192,7 @@
                             <a href="./seguros.html">Seguros</a>
                         </li>
                         <li>
-                            <a href="./contato.html">Contato</a>
+                            <a href="#">Contato</a>
                         </li>
 
                         <li>
