--- a/src/contato.html
+++ b/src/contato.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Termos e Condições | Bikcraft</title>
-    <meta name="description" content="Termos e Condições">
+    <title>Contato| Bikcraft</title>
+    <meta name="description" content="Contato">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 
-<body id="termos">
+<body id="contato">
     <header class="header-bg">
         <div class="header container">
             <a href="./">
@@ -44,30 +44,53 @@
     <main>
         <div class="titulo-bg">
             <div class="titulo container">
-                <p class="font-2-l-b cor-5">Termos de uso</p>
-                <h1 class="font-1-xxl cor-0">Termos e Condições<span class="cor-p1">.</span></h1>
+                <p class="font-2-l-b cor-5">Respostas em até 24h</p>
+                <h1 class="font-1-xxl cor-0">nosso contato<span class="cor-p1">.</span></h1>
             </div>
         </div>
 
-        <div class="termos font-2-s cor-10 container">
-            <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
-            <p>1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também
-                aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos
-                à vista também aceitamos PIX e Boleto.</p>
-            <p>1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também
-                aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos
-                à vista também aceitamos PIX e Boleto.</p>
-            <p>1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também
-                aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos
-                à vista também aceitamos PIX e Boleto.</p>
-            <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
-            <p>2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também
-                aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos
-                à vista também aceitamos PIX e Boleto.</p>
-            <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
-            <p>3.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também
-                aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos
-                à vista também aceitamos PIX e Boleto.</p>
+        <div class="contato container">
+            <section class="contato-dados" aria-label="Endereço">
+                <h2 class="font-1-m cor-0">Loja Online</h2>
+                <div class="contato-endereco font-2-s cor-4">
+                    <p>Rua Ali perto,35</p>
+                    <p>São Paulo - SP</p>
+                    <p>Brasil - Terra - Via Láctea</p>
+                </div>
+                <address class="contato-meios font-2-s cor-4">
+                    <a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a>
+                    <a href="mailto:assistencia@bikecraft.com">assistencia@bikecraft.com</a>
+                    <a href="tel:+551199999999">+55 11 9999-9999</a>
+                </address>
+                <div class="contato-redes">
+                    <a href="#"> <img src="../public/img/redes/instagram-p.svg" alt="instagram"></a>
+                    <a href="#"> <img src="../public/img/redes/facebook-p.svg" alt="facebook"></a>
+                    <a href="#"> <img src="../public/img/redes/youtube-p.svg" alt="youtube"></a>
+                </div>
+            </section>
+            <section class="contato-formulario" aria-label="Formulário">
+                <form class="form" action="./contato.html">
+                    <div>
+                        <label for="nome">Nome</label>
+                        <input type="text" id="nome" name="nome" placeholder="Seu nome">
+                    </div>
+                    <div>
+                        <label for="telefone">Telefone</label>
+                        <input type="text" id="telefone" name="telefone" placeholder="(11) 9999-9999">
+                    </div>
+
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="contato@email.com">
+                    </div>
+                    <div>
+                        <label for="mensagem">Mensagem</label>
+                        <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa ?"></textarea>
+                    </div>
+                    <button class="botao"> Enviar Mensagem</button>
+                </form>
+            </section>
+
         </div>
 
 
