--- a/src/bicicletas/nimbus.html
+++ b/src/bicicletas/nimbus.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nimbus | Bikcraft</title>
-    <meta name="description" content="Termos e Condições">
+    <meta name="description" content="Bicicleta: Nimbus">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -171,7 +171,7 @@
                             <a href="../seguros.html">Seguros</a>
                         </li>
                         <li>
-                            <a href="#">Contato</a>
+                            <a href="../contato.html">Contato</a>
                         </li>
 
                         <li>
