--- a/src/seguros.html
+++ b/src/seguros.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seguros | Bikcraft</title>
-    <meta name="description" content="Termos e Condições">
+    <meta name="description" content="Seguros">
+    <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -192,7 +193,7 @@
                             <a href="./seguros.html">Seguros</a>
                         </li>
                         <li>
-                            <a href="#">Contato</a>
+                            <a href="./contato.html">Contato</a>
                         </li>
 
                         <li>
