chore: add javascript

--- a/src/orcamento.html
+++ b/src/orcamento.html
@@ -59,6 +59,7 @@
 
                 <input type="radio" name="tipo" value="seguro" id="seguro">
                 <label for="seguro">Seguro</label>
+
                 <div class="orcamento-conteudo" id="orcamento-bikcraft">
                     <h2 class="font-1-xs cor-5">Escolha a sua</h2>
 
@@ -209,6 +210,7 @@
             <p class="font-2-m cor-6 footer-copy">Bikcraft © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
