--- a/src/bicicletas/nimbus.html
+++ b/src/bicicletas/nimbus.html
@@ -60,7 +60,7 @@
                 <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem
                     equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <div class="bicicleta-comprar">
-                    <a class="botao" href="../orcamento.html">Comprar Agora</a>
+                    <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nimbus">Comprar Agora</a>
                     <span class="font-1-xs cor-6"><img src="../../public/img/icones/entrega.svg" alt=""> entrega em 5
                         dias</span>
                     <span class="font-1-xs cor-6"><img src="../../public/img/icones/estoque.svg" alt=""> 18 em
@@ -186,6 +186,7 @@
                 reservados.</p>
         </div>
     </footer>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
