--- a/src/index.html
+++ b/src/index.html
@@ -243,6 +243,10 @@
             <p class="font-2-m cor-6 footer-copy">Bikcraft © Alguns direitos reservados.</p>
         </div>
     </footer>
+
+    <script src="./js/plugins/simple-anime.js"></script>;
+    <script src="./js/script.js"></script>
+
 </body>
 
 </html>
