--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
                     completamente as suas cores.
                 </p>
 
-                <a class="link" href="../src/bicicletas.html">Escolha um modelo</a>
+                <a class="link" href="./bicicletas.html">Escolha um modelo</a>
                 <div class="tecnologia-vantagens">
                     <div>
                         <img src="./img/icones/eletrica.svg" alt="" />
